Fixed positions of logo on small screen reload

--- a/_navbar-landscape.scss
+++ b/_navbar-landscape.scss
@@ -8,4 +8,7 @@ nav {
     .profile {
         top: 100px;
     }
+    .logo {
+        left: calc(100vw - 70px);
+    }
 }
